<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/base_cardview"
    android:layout_width="match_parent"
    android:layout_height="120dp"
    android:layout_marginLeft="16dp"
    android:layout_marginTop="8dp"
    android:layout_marginRight="16dp"
    android:layout_marginBottom="8dp"
    android:background="#FFFFFF"
    app:cardBackgroundColor="#00FFFFFF"
    app:cardCornerRadius="2dp"
    app:cardElevation="1dp">

    <ImageView
        android:id="@+id/item_image"
        android:layout_width="98dp"
        android:layout_height="98dp"
        android:layout_gravity="center|start"
        android:layout_marginStart="10dp"
        app:srcCompat="@drawable/ic_base_video_icon" />

    <TextView
        android:id="@+id/item_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="120dp"
        android:layout_marginTop="12dp"
        android:layout_marginEnd="16dp"
        android:ellipsize="end"
        android:maxLines="1"
        android:text="@string/movie_title"
        android:textColor="@android:color/black"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/item_rating"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="120dp"
        android:layout_marginTop="40dp"
        android:text="@string/default_imdb_rating"
        android:textAllCaps="false"
        android:textColor="@android:color/holo_blue_light" />

    <TextView
        android:id="@+id/about_cinema"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="120dp"
        android:layout_marginTop="70dp"
        android:onClick="about_cinema_click"
        android:text="@string/about_cinema"
        android:textColor="@android:color/black" />

    <TextView
        android:id="@+id/item_year"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="280dp"
        android:layout_marginTop="40dp"
        android:text="@string/year_cinema"
        android:textColor="@android:color/black" />

    <TextView
        android:id="@+id/HomeFragmentRecyclerItemTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|center"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:text="бЛА БЛА БЛА" />

    <ImageView
        android:id="@+id/item_notification"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|right"
        android:layout_marginRight="16dp"
        android:layout_marginBottom="16dp"
        android:onClick="item_notification"
        app:srcCompat="@drawable/ic_notifications"
        tools:ignore="RtlHardcoded,VectorDrawableCompat" />

</android.support.v7.widget.CardView>
